# utils/swagger_output.json
@@ -5,7 +5,7 @@
     "description": "Description",
     "version": "1.0.0"
   },
-  "host": "localhost:3002",
+  "host": "172.17.13.174:3002",
   "basePath": "/",
   "schemes": [
     "http"
@@ -452,7 +452,7 @@
         }
       }
     },
-    "/api/user-service/v1/test/upload/{id_student}": {
+    "/api/user-service/v1/test/upload/{id_user}": {
       "post": {
         "description": "",
         "consumes": [
@@ -460,7 +460,7 @@
         ],
         "parameters": [
           {
-            "name": "id_student",
+            "name": "id_user",
             "in": "path",
             "required": true,
             "type": "string"
